--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.0.0'
-group = 'mod.teamdraco.freezedup' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'freezedup'
+group = 'teamdraco.frozenup' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'frozenup'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
